--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Welcome to JS world</h1>
+    <p>I am Uday Kumar Polu</p>
     <script src="app.js"></script>
 </body>
 </html>
