Added many files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h1>Welcome to JS world</h1>
-    <p>I am Uday Kumar Polu</p>
-    <script src="app.js"></script>
+    <script src="./functions/anonymous-functions.js"></script>
   </body>
 </html>
