Added OOPS Concepts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Welcome to JS world</h1>
-    <script src="./Array/arrayMethods.js"></script>
+    <script src="./OOPS/__proto__.js"></script>
   </body>
 </html>
