added ES6 files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Welcome to JS world</h1>
-    <script src="./test/test.js"></script>
+    <script src="./18.ES6-Basics/8.class.js"></script>
   </body>
 </html>
